--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-handlebars": "^3.1.0",
     "handlebars": "^4.7.3",
     "minimist": "^1.2.5",
+    "morgan": "^1.10.0",
     "node-fetch": "^2.6.0",
     "xml2js": "^0.4.23"
   },
