--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A Weather APP",
   "private": true,
   "type": "module",
-  "browserslist": ["> 0.5% or last 2 versions, not dead"],
+  "browserslist": [
+    "> 0.5% or last 2 versions, not dead"
+  ],
   "scripts": {
     "start": "node --experimental-modules src/index.js",
     "ui": "browser-sync start --proxy=localhost:8000 --files='**/*.css, **/*.js' --ignore=node_modules --reload-delay 10 --no-ui --no-notify--reload-delay 10",
@@ -40,9 +42,12 @@
     "@babel/plugin-syntax-import-meta": "^7.8.3",
     "@babel/plugin-transform-runtime": "^7.9.0",
     "@babel/preset-env": "^7.9.5",
+    "@babel/register": "^7.9.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "base64-inline-loader": "^1.1.1",
     "browser-sync": "^2.26.7",
+    "css-loader": "^3.5.2",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-config-google": "^0.14.0",
@@ -53,6 +58,8 @@
     "eslint-plugin-standard": "^4.0.1",
     "handlebars-loader": "^1.7.1",
     "mkdirp": "^1.0.3",
+    "style-loader": "^1.1.3",
+    "url-loader": "^4.1.0",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
     "webpack-node-externals": "^1.7.2"
